.kustomize/base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saus
  template:
    metadata:
      labels:
        app: saus
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: static-volume
              mountPath: /var/www/saus/static
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
        - name: saus-gunicorn
          image: ghcr.io/raynix/saus:v0.2
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: saus-config-volume
              mountPath: /var/www/saus/saus/settings.py
              subPath: settings.py
            - name: static-volume
              mountPath: /var/www/saus/static
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
      volumes:
        - name: nginx-config-volume
          configMap:
            name: saus-nginx
        - name: saus-config-volume
          configMap:
            name: saus-django
        - name: static-volume
          emptyDir: {}
