.kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saus
spec:
  selector:
    app: saus
  ports:
    - name: http
      port: 8080
      targetPort: 8080
